Fix - Backbone modal footer area while shifting from content-box to border-box

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -4144,7 +4144,6 @@ table.bar_chart {
 		left: 0;
 		right: 0;
 		bottom: 0;
-		height: 30px;
 		z-index: 100;
 		padding: 10px 0px;
 		border: 0 solid #dfdfdf;
